# astack

./: .gitignore  README.md  pyproject.toml
alphastack/: __init__.py  cli.py  config.py
alphastack/adapters/: example_adapter.py
alphastack/core/: __init__.py  deduper.py  evolver.py  exporter.py  formalizer.py  generator.py  memory.py  pipeline.py  ranker.py  validator.py
alphastack/interfaces/: __init__.py
alphastack/prompts/: generate_alpha.txt
alphastack/schemas/: __init__.py
astack/: __init__.py  cli.py  config.py
astack/adapters/: __init__.py  alphagpt_parser.py  example_adapter.py
astack/core/: __init__.py  auditor.py  criteria.py  decider.py  deduper.py  evolver.py  experience.py  exporter.py  factor_library.py  formalizer.py  generator.py  improver.py  llm_improver.py  memory.py  migrator.py  pattern_memory.py  pipeline.py  ranker.py  search.py  validator.py
astack/interfaces/: __init__.py
astack/prompts/: critique_alpha.txt  evaluate_alpha.txt  formalize_alpha.txt
astack/runtime/: agent.py
astack/schemas/: __init__.py
demo_memory/: memory.jsonl
demo_outputs/: alphastack_report.json
docs/: ARCHITECTURE.md  COMPARISON_NOTES.md
examples/: integrate_with_alphagpt.py  integrate_with_existing_framework.py  minimal_pipeline.py
examples/factor_library/: admitted.py  manifest.json
examples/sample_outputs/: astack_report_20260323_205929.json  manifest.json
tests/: test_alphagpt_parser.py  test_cli.py  test_criteria.py  test_governance.py  test_intelligence.py  test_memory.py  test_pipeline.py  test_runtime.py  test_schemas.py
(+24 files in other folders)
