[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astack"
version = "0.3.0"
description = "Framework-agnostic alpha research core with memory, evolution, and Claude/Codex skill integration."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "bohanshu"}]
license = {text = "MIT"}
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0.1",
]

[project.scripts]
astack = "astack.cli:main"

[tool.setuptools.packages.find]
include = ["astack*"]
